<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.sebastian.my_app.RegistroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iIcono_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/mediumaquamarine">

                    <EditText
                        android:id="@+id/eCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:hint="@string/correo"
                        android:inputType="textEmailAddress|textAutoComplete" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iIcono_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/ic_password" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/mediumaquamarine"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/eContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        android:maxLength="8" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/darkgray"
                android:text="@string/caracteres_contra"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iIcono_password_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/ic_password" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/mediumaquamarine"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/eRepetir_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/reptir_contrasena"
                        android:inputType="textPassword"
                        android:maxLength="8" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:background="@drawable/boton_redondo"
                android:elevation="8dp"
                android:onClick="registrar"
                android:text="@string/registrarse"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>



